--- a/ZaifRate/src/application/View.fxml
+++ b/ZaifRate/src/application/View.fxml
@@ -12,7 +12,7 @@
          <font>
             <Font name="System Bold" size="24.0" />
          </font></Label>
-      <JFXComboBox fx:id="comboBox" layoutX="49.0" layoutY="2.0" onAction="#comboBoxSelected" prefHeight="25.0" prefWidth="91.0" promptText="通貨ペア" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="90.0" AnchorPane.topAnchor="10.0" />
+      <JFXComboBox fx:id="comboCurrency" layoutX="49.0" layoutY="2.0" onAction="#comboCurrencySelected" prefHeight="25.0" prefWidth="91.0" promptText="通貨ペア" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="90.0" AnchorPane.topAnchor="10.0" />
       <JFXComboBox fx:id="comboFreq" layoutX="135.0" layoutY="10.0" onAction="#comboFreqSelected" prefHeight="25.0" prefWidth="74.0" promptText="更新頻度" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <padding>
             <Insets left="5.0" />
